--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "google-trends-api": "^4.9.0",
     "install": "^0.12.2",
     "jquery": "^3.4.1",
     "npm": "^6.9.0",
