--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "google-trends-api": "^4.9.0",
+    "https-proxy-agent": "^2.2.1",
     "install": "^0.12.2",
     "jquery": "^3.4.1",
     "npm": "^6.9.0",
