--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "jquery": "^3.4.1",
     "npm": "^6.9.0",
     "react": "^16.8.6",
+    "react-alert": "^5.5.0",
+    "react-alert-template-basic": "^1.0.0",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-transition-group": "^4.1.1",
     "web3": "^1.0.0-beta.55"
   },
   "scripts": {
