--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.1.1",
+    "universal-cookie": "^4.0.0",
     "web3": "^1.0.0-beta.37"
   },
   "scripts": {
