--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,16 @@
 image: node:10
 
+before_script:
+  - npm install
+
+cache:
+  paths:
+    - node_modules/
+
 pages:
   stage: deploy
   script:
-  - npm install
   - npm run generate
-  - mv ./dist public
   artifacts:
     paths:
     - public
