--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,12 @@
-image: node:10
+image: alpine:latest
 
 pages:
   stage: deploy
   script:
-  - npm install
-  - npm run generate
-  - mv ./dist public
+  - echo 'Nothing to do...'
   artifacts:
     paths:
     - public
   only:
   - master
+
